--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -1,30 +1,12 @@
 ---
-layout: post
-title: "Rust"
-description: ""
-category: projects
-tags: []
-comments : false
+title: "Post: Rust"
+excerpt_separator: "<!--more-->"
+categories:
+  - Blog
+tags:
+  - Post Formats
+  - readability
+  - standard
 ---
-{% include JB/setup %}
 
-
-<img src="{{site.url}}/images/projects/Rust.png" alt="Gnu" style="width: 250px;" align="right"/>
-
-# Getting started
-
-The first place to begin is with the [Rust Book](https://doc.rust-lang.org/book/). The book will take you through all parts of Rust you need to get started creating your own projects
-
-### Highlights
-
-Installing Rust on a Unix/linux system:
-
-   ```
-      curl https://sh.rustup.rs -sSf | sh
-   ```
-   
-# My projects
-
-### [Rust Getting Started Tutorial](https://github.com/Jcrash29/RustTutorial)
-
-### [Rust fat filesystem adaptation](https://gitlab.com/Jcrash29/fat-rs)
+Hello World
