--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -9,4 +9,20 @@ tags:
   - standard
 ---
 
-Hello World
+# Getting started
+
+The first place to begin is with the [Rust Book](https://doc.rust-lang.org/book/). The book will take you through all parts of Rust you need to get started creating your own projects
+
+### Highlights
+
+Installing Rust on a Unix/linux system:
+
+   ```
+      curl https://sh.rustup.rs -sSf | sh
+   ```
+   
+# My projects
+
+### [Rust Getting Started Tutorial](https://github.com/Jcrash29/RustTutorial)
+
+### [Rust fat filesystem adaptation](https://gitlab.com/Jcrash29/fat-rs)
