--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -9,6 +9,11 @@ tags:
   - standard
 ---
 
+<figure>
+	<a href="{{site.url}}/assets/images/projects/Rust.png"><img src="{{site.url}}/assets/images/projects/Rust.png" /></a>
+	<figcaption>Rust Logo.</figcaption>
+</figure>
+
 # Getting started
 
 The first place to begin is with the [Rust Book](https://doc.rust-lang.org/book/). The book will take you through all parts of Rust you need to get started creating your own projects
