Adding project page

--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -2,7 +2,7 @@
 title: "Post: Rust"
 excerpt_separator: "<!--more-->"
 categories:
-  - Blog
+  - Projects
 tags:
   - Post Formats
   - readability
