Attempt to add teaser image

--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -7,10 +7,12 @@ tags:
   - Post Formats
   - readability
   - standard
+header:
+  teaser: /assets/images/projects/Rust.png
 ---
 
-<figure>
-	<a href="{{site.url}}/assets/images/projects/Rust.png"><img src="{{site.url}}/assets/images/projects/Rust.png" /></a>
+<figure class="align-left">
+	<img src="{{site.url}}{{site.baseurl}}/assets/images/projects/Rust.png" />
 	<figcaption>Rust Logo.</figcaption>
 </figure>
 
