--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -1,5 +1,5 @@
 ---
-title: "Post: Rust"
+title: "Rust"
 excerpt_separator: "<!--more-->"
 categories:
   - Projects
@@ -12,7 +12,7 @@ header:
 ---
 
 <figure class="align-left">
-	<img src="{{site.url}}{{site.baseurl}}/assets/images/projects/Rust.png" />
+	<img src="/assets/images/projects/Rust.png" />
 	<figcaption>Rust Logo.</figcaption>
 </figure>
 
