Trying some new teaser stuff

--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -12,7 +12,7 @@ header:
 ---
 
 <figure class="align-left">
-	<img src="/assets/images/projects/Rust.png" />
+	<img src="{{site.url}}{{site.baseurl}}/assets/images/projects/Rust.png" />
 	<figcaption>Rust Logo.</figcaption>
 </figure>
 
