Adding Lifeguard robotics information

--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -4,11 +4,8 @@ excerpt_separator: "<!--more-->"
 categories:
   - Projects
 tags:
-  - Post Formats
-  - readability
-  - standard
 header:
-  teaser: /assets/images/projects/Rust.png
+  teaser: {{site.url}}{{site.baseurl}}/assets/images/projects/Rust.png
 ---
 
 <figure class="align-left">
