--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -3,9 +3,9 @@ title: "Rust"
 excerpt_separator: "<!--more-->"
 categories:
   - Projects
-tags:
+tags: []
 header:
-  teaser: {{site.url}}{{site.baseurl}}/assets/images/projects/Rust.png
+  teaser: /assets/images/projects/Rust.png
 ---
 
 <figure class="align-left">
