All 3 pages load, now trying the images

--- a/_posts/2017-06-01-Rust.md
+++ b/_posts/2017-06-01-Rust.md
@@ -5,7 +5,7 @@ categories:
   - Projects
 tags: []
 header:
-  teaser: /assets/images/projects/Rust.png
+  teaser: "/assets/images/projects/Rust.png"
 ---
 
 <figure class="align-left">
